// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea renders RTL styling 1`] = `
<Textarea>
  <Input
    className="c-txt__input--area is-rtl "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area is-rtl -textarea c-txt__input is-rtl "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders bare styling if provided 1`] = `
<Textarea
  bare={true}
>
  <Input
    bare={true}
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input c-txt__input--bare "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders default styling 1`] = `
<Textarea>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders disabled styling if provided 1`] = `
<Textarea
  disabled={true}
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    disabled={true}
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input is-disabled "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
      disabled={true}
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders focused styling if provided 1`] = `
<Textarea
  focused={true}
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    focused={true}
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input is-focused "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders hovered styling if provided 1`] = `
<Textarea
  hovered={true}
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    hovered={true}
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input is-hovered "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders resizable styling if provided 1`] = `
<Textarea
  resizable={true}
>
  <Input
    className="c-txt__input--area is-resizable "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    resizable={true}
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area is-resizable -textarea c-txt__input "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea renders small styling if provided 1`] = `
<Textarea
  small={true}
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    small={true}
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input c-txt__input--sm "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea validation renders error styling if provided 1`] = `
<Textarea
  validation="error"
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    validation="error"
  >
    <textarea
      aria-invalid={true}
      className="c-txt__input--area -textarea c-txt__input c-txt__input--error "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea validation renders none styling if provided 1`] = `
<Textarea
  validation="none"
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    validation="none"
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea validation renders success styling if provided 1`] = `
<Textarea
  validation="success"
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    validation="success"
  >
    <textarea
      aria-invalid={false}
      className="c-txt__input--area -textarea c-txt__input c-txt__input--success "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;

exports[`Textarea validation renders warning styling if provided 1`] = `
<Textarea
  validation="warning"
>
  <Input
    className="c-txt__input--area "
    data-garden-id="textfields.textarea"
    data-garden-version="version"
    validation="warning"
  >
    <textarea
      aria-invalid={true}
      className="c-txt__input--area -textarea c-txt__input c-txt__input--warning "
      data-garden-id="textfields.textarea"
      data-garden-version="version"
    />
  </Input>
</Textarea>
`;
